# vacancy_tasks

./: README.rst  pyproject.toml
job_task/: task_1.py  task_2.py  task_3.py
tests/: test_job_task.py
